--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -3,7 +3,7 @@
 .comment{
   width: 100%;
   font-size: 0.875rem;
-  color: $dark-shade-75;
+  color: $color-main-75;
   &__author{
     display: flex;
     margin-bottom: 7px;
