--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -9,7 +9,7 @@
     padding-top: 14px;
     padding-bottom: 15px;
     font-weight: bold;
-    background: $purple-gradient;
+    background: $color-secondary-gradient;
     color: white;
     border-radius: 22px;
     border: none;
