--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,6 +1,6 @@
-$montserrat: Montserrat, arial, sans-serif;
-$quicksand: Quicksand, arial, sans-serif;
-$opensans: Opensans, arial, sans-serif;
+$font-main: Montserrat, arial, sans-serif;
+$font-secondary: Quicksand, arial, sans-serif;
+$font-secondary-reserve: Opensans, arial, sans-serif;
 $material-icons: "Material Icons";
 
 @font-face {
