--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -3,7 +3,7 @@
 }
 .about-room{
   display: flex;
-  border-bottom: 1px solid $dark-shade-1;
+  border-bottom: 1px solid $color-main-1;
   margin-bottom: 20px;
   &:last-child{
     margin-bottom: 0px;
@@ -12,10 +12,10 @@
   &__icon{
     font-family: $material-icons;
     font-size: 3rem;
-    background: $purple-gradient;
+    background: $color-secondary-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    color: $purple;
+    color: $color-secondary;
     margin-right: 10px;
     padding-bottom: 20px;
   }
