--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -21,8 +21,8 @@
     line-height: 1.875rem;
   }
   &__number{
-    font-family: $opensans;
-    color: $dark-shade-100;
+    font-family: $font-secondary-reserve;
+    color: $color-main-100;
     font-size: 1.5rem;
     margin-left: 4px;
     &_no-lux{
@@ -31,16 +31,16 @@
   }
   &__lux{
     margin-left: 5px;
-    color: $purple;
+    color: $color-secondary;
     font-size: 0.75rem;
     margin-right: auto;
   }
   &__cost{
-    color: $dark-shade-50;
+    color: $color-main-50;
     margin-right: 4px;
   }
   &__for-day{
-    color: $dark-shade-50;
+    color: $color-main-50;
     font-weight: normal;
     font-size: 0.75rem;
   }
@@ -60,7 +60,7 @@
 .calculate{
   font-size: 0.875rem;
   line-height: 1.5rem;
-  color: $dark-shade-75;
+  color: $color-main-75;
   &__row{
     display: flex;
     justify-content: space-between;
@@ -81,11 +81,11 @@
       font-size: 0.75rem;
       line-height: 1.25rem;
       font-weight: bold;
-      color: $dark-shade-25;
+      color: $color-main-25;
       text-align: center;
       width: 1.25rem;
       height: 1.25rem;
-      border: 1px solid $dark-shade-25;
+      border: 1px solid $color-main-25;
       border-radius: 50%;
       box-sizing: border-box;
     }
@@ -99,11 +99,11 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  font-family: $opensans;
+  font-family: $font-secondary-reserve;
   font-size: 1.1875rem;
   font-weight: bold;
   &__border{
     flex-grow: 1;
-    border-bottom: 1px dashed $dark-shade-25;
+    border-bottom: 1px dashed $color-main-25;
   }
 }
