--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -6,7 +6,7 @@
     position: relative;
     font-size: 0.875rem;
     line-height: 1.5rem;
-    color: $dark-shade-75;
+    color: $color-main-75;
     margin-bottom: 10px;
     padding-left: 21px;
     &:last-child{
@@ -17,7 +17,7 @@
       position: absolute;
       width: 0.625rem;
       height: 0.625rem;
-      background: $dark-shade-25;
+      background: $color-main-25;
       border-radius: 50%;
       margin-left: -21px;
       top: 0.375rem;
