--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -8,7 +8,7 @@
     padding-left: 30px;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $dark-shade-50;
+    color: $color-main-50;
     cursor: pointer;
   }
   &__input{
@@ -17,7 +17,7 @@
     -moz-appearance: none;
     appearance: none;
     &:checked + .checkbox__box{
-      border-color: $purple;
+      border-color: $color-secondary;
     }
     &:checked + .checkbox__box::before{
       content: "";
@@ -27,9 +27,9 @@
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image:  $purple-gradient;
-      -webkit-border-image:  $purple-gradient;
-      border-image: $purple-gradient;
+      -moz-border-image:  $color-secondary-gradient;
+      -webkit-border-image:  $color-secondary-gradient;
+      border-image: $color-secondary-gradient;
       border-color: transparent;
       border-image-slice: 1;
       border-style: solid;
@@ -44,7 +44,7 @@
     height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
-    border: 1px solid $dark-shade-25;
+    border: 1px solid $color-main-25;
     border-radius: 4px;
     background-color: white;
   }
