--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: relative;
   &__title{
-    color: $dark-shade-100;
+    color: $color-main-100;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 5px;
@@ -19,7 +19,7 @@
     text-align: center;
     cursor: default;
     width: 2.75rem;
-    color: $dark-shade-75;
+    color: $color-main-75;
     position: absolute;
     top: 1px;
     right: 1px;
@@ -28,33 +28,33 @@
     background-color: white;
     user-select: none;
     &:hover + .dropdown__input {
-      border-color: $dark-shade-50;
+      border-color: $color-main-50;
     }
   }
   &__input{
     width: 100%;
     padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
     background: #FFFFFF;
-    border: 1px solid $dark-shade-25;
+    border: 1px solid $color-main-25;
     box-sizing: border-box;
     border-radius: 4px;
     font-family: inherit;
     font-size: 0.875rem;
     line-height: 1.125rem;
-    color: $dark-shade-75;
+    color: $color-main-75;
     cursor: default;
     outline: none;
     &_expanded{
       border-radius: 4px 4px 0px 0px;
-      border-color: $dark-shade-50;
-      box-shadow: 0px 10px 20px $dark-shade-05;
+      border-color: $color-main-50;
+      box-shadow: 0px 10px 20px $color-main-05;
     }
     &:hover {
-      border-color: $dark-shade-50;
+      border-color: $color-main-50;
     }
   }
   &__elements{
-    border: 1px solid $dark-shade-50;
+    border: 1px solid $color-main-50;
     border-radius: 0px 0px 4px 4px;
     border-top-width: 0;
     padding-left: 14px;
@@ -62,7 +62,7 @@
     position: absolute;
     width: 100%;
     background: #fff;
-    box-shadow: 0px 10px 20px $dark-shade-05;
+    box-shadow: 0px 10px 20px $color-main-05;
     box-sizing: border-box;
     display: none;
     &_expanded{
@@ -86,8 +86,8 @@
   &__button{
     font-family: Arial, sans-serif;
     font-size: 1.125rem;
-    color: $dark-shade-50;
-    border: 1px solid $dark-shade-25;
+    color: $color-main-50;
+    border: 1px solid $color-main-25;
     width: 1.875rem;
     height: 1.875rem;
     background: none;
@@ -96,8 +96,8 @@
     cursor: pointer;
     outline: none;
     &:disabled{
-      color: $dark-shade-1;
-      border-color: $dark-shade-1;
+      color: $color-main-1;
+      border-color: $color-main-1;
     }
   }
   &__minus{
@@ -126,12 +126,12 @@
     cursor: pointer;
   }
   &__clear{
-    color: $dark-shade-50;
+    color: $color-main-50;
     &_hidden{
       visibility: hidden;
     }
   }
   &__apply{
-    color: $purple;
+    color: $color-secondary;
   }
 }
