--- a/src/components/expandable-checkbox/expandable-checkbox.scss
+++ b/src/components/expandable-checkbox/expandable-checkbox.scss
@@ -14,14 +14,14 @@
     font-size: 0.75rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: $dark-shade-100;
+    color: $color-main-100;
   }
   &__arrow{
     font-family: $material-icons;
     font-size: 1.5rem;
     width: 2.75rem;
     line-height: 2.75rem;
-    color: $dark-shade-50;
+    color: $color-main-50;
     text-align: center;
     transition-duration: 0.5s;
     &_expanded{
