--- a/src/components/rich-checkbox/rich-checkbox.scss
+++ b/src/components/rich-checkbox/rich-checkbox.scss
@@ -9,7 +9,7 @@
     font-weight: bold;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    color: $dark-shade-75;
+    color: $color-main-75;
     cursor: pointer;
   }
   &__input{
@@ -18,7 +18,7 @@
     -moz-appearance: none;
     appearance: none;
     &:checked + .rich-checkbox__box{
-      border-color: $purple;
+      border-color: $color-secondary;
     }
     &:checked + .rich-checkbox__box::before{
       content: "";
@@ -28,9 +28,9 @@
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image:  $purple-gradient;
-      -webkit-border-image:  $purple-gradient;
-      border-image: $purple-gradient;
+      -moz-border-image:  $color-secondary-gradient;
+      -webkit-border-image:  $color-secondary-gradient;
+      border-image: $color-secondary-gradient;
       border-color: transparent;
       border-image-slice: 1;
       border-style: solid;
@@ -45,16 +45,16 @@
     height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
-    border: 1px solid $dark-shade-25;
+    border: 1px solid $color-main-25;
     border-radius: 4px;
     background-color: white;
   }
   &__description{
     padding-left: 30px;
     margin-top: 4px;
-    font-family: $montserrat;
+    font-family: $font-main;
     font-size: 0.75rem;
     line-height: 0.875rem;
-    color: $dark-shade-50;
+    color: $color-main-50;
   }
 }
