--- a/src/components/search-room-card/search-room-card.scss
+++ b/src/components/search-room-card/search-room-card.scss
@@ -13,7 +13,7 @@
     padding: 40px 4.33vw 30px 4.33vw;
   }
   &__title{
-    font-family: $opensans;
+    font-family: $font-secondary-reserve;
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 20px;
