--- a/src/components/type/type.scss
+++ b/src/components/type/type.scss
@@ -3,7 +3,7 @@
   &__span {
     min-width: 37px;
     text-align: right;
-    color: $dark-shade-25;
+    color: $color-main-25;
     font-weight: normal;
     &_H1 {
       font-size: 1.5rem;
@@ -23,26 +23,26 @@
     margin-left: 30px;
     &_H1 {
       font-size: 1.5rem;
-      font-family: $quicksand;
+      font-family: $font-secondary;
       font-weight: bold;
-      color: $dark-shade-100;
+      color: $color-main-100;
     }
     &_H2 {
       font-size: 1.1875rem;
-      font-family: $quicksand;
+      font-family: $font-secondary;
       font-weight: bold;
-      color: $dark-shade-100;
+      color: $color-main-100;
     }
     &_H3 {
       font-size: 0.75rem;
       font-weight: bold;
       text-transform: uppercase;
-      color: $dark-shade-100;
+      color: $color-main-100;
     }
     &_body {
       font-size: 0.875rem;
       font-weight: normal;
-      color: $dark-shade-75;
+      color: $color-main-75;
       line-height: 24px;
     }
   }
