--- a/src/pages/websitePages/landing-page/landing-page.scss
+++ b/src/pages/websitePages/landing-page/landing-page.scss
@@ -6,7 +6,7 @@
 
 html {
   font-size: 16px;
-  font-family: $montserrat;
+  font-family: $font-main;
 }
 
 body {
@@ -36,7 +36,7 @@ body {
     font-size: 0.875rem;
     line-height: 1.5rem;
     text-align: right;
-    color: $dark-shade-75;
+    color: $color-main-75;
     width: 297px;
     align-self: flex-end;
     margin-top: 318px;
