--- a/src/pages/websitePages/room-details/room-details.scss
+++ b/src/pages/websitePages/room-details/room-details.scss
@@ -9,7 +9,7 @@
 
 html {
   font-size: 16px;
-  font-family: $montserrat;
+  font-family: $font-main;
 }
 
 body {
@@ -69,11 +69,11 @@ body {
     margin-bottom: 13px;
   }
   &__text {
-    font-family: $opensans;
+    font-family: $font-secondary-reserve;
     font-weight: bold;
     font-size: 1.1875rem;
     line-height: 1.5rem;
-    color: $dark-shade-100;
+    color: $color-main-100;
     margin-bottom: 20px;
     &_rules {
       margin-left: 20px;
@@ -94,10 +94,10 @@ body {
   }
   &__el {
     position: relative;
-    font-family: $montserrat;
+    font-family: $font-main;
     font-size: 14px;
     line-height: 24px;
-    color: $dark-shade-75;
+    color: $color-main-75;
     padding-left: 20px;
     &:last-child {
       margin-bottom: 0;
@@ -134,7 +134,7 @@ body {
   }
   &__num-of-comments {
     font-size: 0.875rem;
-    color: $dark-shade-50;
+    color: $color-main-50;
     margin-top: 5px;
   }
   &__comments {
@@ -162,7 +162,7 @@ body {
   &__cancel-text {
     font-size: 0.875rem;
     line-height: 1.5rem;
-    color: $dark-shade-75;
+    color: $color-main-75;
   }
   &__booking-room-card {
     width: 380px;
@@ -175,6 +175,6 @@ body {
     }
   }
   &__footer {
-    border-top: 1px solid $dark-shade-25;
+    border-top: 1px solid $color-main-25;
   }
 }
