--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,10 +1,10 @@
-$dark-shade-100: #1f2041;
-$dark-shade-75: rgba(31, 32, 65, 0.75);
-$dark-shade-50: rgba(31, 32, 65, 0.5);
-$dark-shade-25: rgba(31, 32, 65, 0.25);
-$dark-shade-1: rgba(31, 32, 65, 0.1);
-$dark-shade-05: rgba(31, 32, 65, 0.05);
-$purple: #bc9cff;
-$purple-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%); 
-$green: #6fcf97;
-$green-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+$color-main-100: #1f2041;
+$color-main-75: rgba(31, 32, 65, 0.75);
+$color-main-50: rgba(31, 32, 65, 0.5);
+$color-main-25: rgba(31, 32, 65, 0.25);
+$color-main-1: rgba(31, 32, 65, 0.1);
+$color-main-05: rgba(31, 32, 65, 0.05);
+$color-secondary: #bc9cff;
+$color-secondary-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%); 
+$color-tertiary: #6fcf97;
+$color-tertiary-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
