--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,18 +1,18 @@
-.dropdown{
+.dropdown {
   font-size: 0.75rem;
   width: 100%;
   position: relative;
-  &__title{
+  &__title {
     color: $color-main-100;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 5px;
   }
-  &__wrapper{
+  &__wrapper {
     width: 100%;
     position: relative;
   }
-  &__arrow{
+  &__arrow {
     font-family: $material-icons;
     font-size: 1.5rem;
     line-height: 2.5rem;
@@ -31,10 +31,10 @@
       border-color: $color-main-50;
     }
   }
-  &__input{
+  &__input {
     width: 100%;
     padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
-    background: #FFFFFF;
+    background: #ffffff;
     border: 1px solid $color-main-25;
     box-sizing: border-box;
     border-radius: 4px;
@@ -44,7 +44,7 @@
     color: $color-main-75;
     cursor: default;
     outline: none;
-    &_expanded{
+    &_expanded {
       border-radius: 4px 4px 0px 0px;
       border-color: $color-main-50;
       box-shadow: 0px 10px 20px $color-main-05;
@@ -53,7 +53,7 @@
       border-color: $color-main-50;
     }
   }
-  &__elements{
+  &__elements {
     border: 1px solid $color-main-50;
     border-radius: 0px 0px 4px 4px;
     border-top-width: 0;
@@ -65,25 +65,25 @@
     box-shadow: 0px 10px 20px $color-main-05;
     box-sizing: border-box;
     display: none;
-    &_expanded{
+    &_expanded {
       display: block;
     }
     z-index: 1;
   }
-  &__element{
+  &__element {
     position: relative;
     display: flex;
     align-items: center;
     margin-bottom: 7px;
-    &:first-child{
+    &:first-child {
       padding-top: 4px;
     }
   }
-  &__name{
+  &__name {
     font-weight: bold;
     text-transform: uppercase;
   }
-  &__button{
+  &__button {
     font-family: Arial, sans-serif;
     font-size: 1.125rem;
     color: $color-main-50;
@@ -95,25 +95,25 @@
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
-    &:disabled{
+    &:disabled {
       color: $color-main-1;
       border-color: $color-main-1;
     }
   }
-  &__minus{
+  &__minus {
     margin-left: auto; // прижимает кнопки минус, плюс и счётчик вправо.
     margin-right: 2rem;
   }
-  &__count{
+  &__count {
     position: absolute;
     font-weight: bold;
     right: 2.6875rem;
   }
-  &__bottom-buttons{
+  &__bottom-buttons {
     display: flex;
     justify-content: space-between;
   }
-  &__bottom-button{
+  &__bottom-button {
     background: none;
     border: none;
     font-family: inherit;
@@ -125,13 +125,13 @@
     margin-bottom: 13px;
     cursor: pointer;
   }
-  &__clear{
+  &__clear {
     color: $color-main-50;
-    &_hidden{
+    &_hidden {
       visibility: hidden;
     }
   }
-  &__apply{
+  &__apply {
     color: $color-secondary;
   }
 }
