--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -3,7 +3,7 @@
 @import '../calendar/calendar.scss';
 @import '../submit-button/submit-button.scss';
 
-.booking-room-card{
+.booking-room-card {
   background-color: white;
   padding: 40px 30px 30px 30px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
@@ -11,7 +11,7 @@
   @media (max-width: 360px) {
     padding: 40px 4.33vw 30px 4.33vw;
   }
-  &__title{
+  &__title {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -20,60 +20,61 @@
     margin-bottom: 15px;
     line-height: 1.875rem;
   }
-  &__number{
+  &__number {
     font-family: $font-secondary-reserve;
     color: $color-main-100;
     font-size: 1.5rem;
     margin-left: 4px;
-    &_no-lux{
+    &_no-lux {
       margin-right: auto;
     }
   }
-  &__lux{
+  &__lux {
     margin-left: 5px;
     color: $color-secondary;
     font-size: 0.75rem;
     margin-right: auto;
   }
-  &__cost{
+  &__cost {
     color: $color-main-50;
     margin-right: 4px;
   }
-  &__for-day{
+  &__for-day {
     color: $color-main-50;
     font-weight: normal;
     font-size: 0.75rem;
   }
-  &__date-dropdown{
+  &__date-dropdown {
     margin-bottom: 20px;
   }
-  &__dropdown{
+  &__dropdown {
     margin-bottom: 19px;
   }
-  &__calculate{
+  &__calculate {
     margin-bottom: 28px;
   }
-  &__total{
+  &__total {
     margin-bottom: 19px;
   }
 }
-.calculate{
+.calculate {
   font-size: 0.875rem;
   line-height: 1.5rem;
   color: $color-main-75;
-  &__row{
+  &__row {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
     }
   }
-  &__services, &__add-services{
+  &__services,
+  &__add-services {
     padding-right: 25px;
     flex-basis: 68%;
     position: relative;
-    &:before{
+    &:before {
       position: absolute;
       content: 'i';
       top: 0;
@@ -90,19 +91,19 @@
       box-sizing: border-box;
     }
   }
-  &__add-services{
+  &__add-services {
     line-height: normal;
     margin-top: 3px;
   }
 }
-.total{
+.total {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
   font-family: $font-secondary-reserve;
   font-size: 1.1875rem;
   font-weight: bold;
-  &__border{
+  &__border {
     flex-grow: 1;
     border-bottom: 1px dashed $color-main-25;
   }
