--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,9 +1,9 @@
-.checkbox{
+.checkbox {
   margin-bottom: 10.5px;
-  &:last-child{
+  &:last-child {
     margin-bottom: 0;
   }
-  &__label{
+  &__label {
     display: inline-block;
     padding-left: 30px;
     font-size: 0.875rem;
@@ -11,24 +11,24 @@
     color: $color-main-50;
     cursor: pointer;
   }
-  &__input{
+  &__input {
     position: absolute;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    &:checked + .checkbox__box{
+    &:checked + .checkbox__box {
       border-color: $color-secondary;
     }
-    &:checked + .checkbox__box::before{
-      content: "";
+    &:checked + .checkbox__box::before {
+      content: '';
       position: absolute;
       top: 0.25rem;
       left: 0.375rem;
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image:  $color-secondary-gradient;
-      -webkit-border-image:  $color-secondary-gradient;
+      -moz-border-image: $color-secondary-gradient;
+      -webkit-border-image: $color-secondary-gradient;
       border-image: $color-secondary-gradient;
       border-color: transparent;
       border-image-slice: 1;
@@ -38,7 +38,7 @@
       box-sizing: border-box;
     }
   }
-  &__box{
+  &__box {
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
