--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -1,9 +1,9 @@
 @import '../toxin-logo/toxin-logo.scss';
 
-.footer-creative{
-  background: #FFFFFF;
+.footer-creative {
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-  &__wrapper{
+  &__wrapper {
     max-width: 560px;
     margin: 0 auto;
     padding: 100px 10px 110px;
@@ -14,34 +14,34 @@
       padding: 6.94vw 10px 7.64vw;
     }
   }
-  &__logo{
+  &__logo {
     margin-bottom: 18px;
   }
-  &__text{
+  &__text {
     font-size: 0.875rem;
     line-height: 1.5rem;
     color: $color-main-75;
     text-align: center;
     margin-bottom: 27px;
   }
-  &__icons{
+  &__icons {
     display: flex;
   }
-  &__icon{
+  &__icon {
     margin-right: 20px;
-    &:last-child{
+    &:last-child {
       margin-right: 0;
     }
     width: 1.5rem;
     height: 1.5rem;
   }
-  &__twitter{
+  &__twitter {
     background: url(../../../components/footer-creative/img/twitter.svg) no-repeat center;
   }
-  &__facebook{
+  &__facebook {
     background: url(../../../components/footer-creative/img/facebook.svg) no-repeat center;
   }
-  &__instagram{
+  &__instagram {
     background: url(../../../components/footer-creative/img/instagram.svg) no-repeat center;
   }
 }
