--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,12 +1,12 @@
 @import '../toxin-logo/toxin-logo.scss';
 @import '../text-fields/text-fields.scss';
 
-.footer{
+.footer {
   width: 100%;
   font-size: 0.875rem;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-  &__wrapper{
+  &__wrapper {
     max-width: 1160px;
     margin: 0 auto;
     padding: 100px 0;
@@ -19,10 +19,10 @@
       justify-content: center;
     }
   }
-  &__content{
+  &__content {
     box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
   }
-  &__about-hotel{
+  &__about-hotel {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -31,14 +31,14 @@
       display: none;
     }
   }
-  &__toxin-logo{
+  &__toxin-logo {
     margin-bottom: 17px;
   }
-  &__text{
+  &__text {
     color: $color-main-75;
     line-height: 1.5rem;
   }
-  &__item{
+  &__item {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -47,7 +47,7 @@
       display: none;
     }
   }
-  &__subtitle{
+  &__subtitle {
     margin-top: 4px;
     font-size: 0.75rem;
     font-weight: bold;
@@ -55,30 +55,30 @@
     text-transform: uppercase;
     margin-bottom: 21px;
   }
-  &__subitem{
+  &__subitem {
     color: $color-main-50;
     text-decoration: none;
     margin-bottom: 20px;
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
     }
   }
-  &__subscribe{
+  &__subscribe {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 260px;    
+    width: 260px;
   }
-  &__subscribe-text{
+  &__subscribe-text {
     line-height: 1.5rem;
     color: $color-main-100;
     margin-bottom: 20px;
   }
-  &__subscribe-field{
+  &__subscribe-field {
     width: 100%;
   }
 }
-.copyright{
+.copyright {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -92,29 +92,29 @@
     flex-wrap: wrap;
     justify-content: center;
   }
-  &__text{
+  &__text {
     line-height: 1.5625rem;
     color: $color-main-75;
   }
-  &__icon{
+  &__icon {
     margin-right: 20px;
-    &:last-child{
+    &:last-child {
       margin-right: 0;
     }
     width: 1.5rem;
     height: 1.5rem;
   }
-  &__twitter{
+  &__twitter {
     margin-left: auto;
     @media (max-width: 444px) {
       margin-left: initial;
     }
     background: url(../../../components/footer-creative/img/twitter.svg) no-repeat center;
   }
-  &__facebook{
+  &__facebook {
     background: url(../../../components/footer-creative/img/facebook.svg) no-repeat center;
   }
-  &__instagram{
+  &__instagram {
     background: url(../../../components/footer-creative/img/instagram.svg) no-repeat center;
   }
 }
