--- a/src/components/radio-button/radio-button.scss
+++ b/src/components/radio-button/radio-button.scss
@@ -1,10 +1,10 @@
-.radio-button{
+.radio-button {
   margin-right: 20px;
   display: inline-block;
-  &:last-child{
+  &:last-child {
     margin-right: 0;
   }
-  &__label{
+  &__label {
     display: inline-block;
     padding-left: 1.875rem;
     font-size: 0.875rem;
@@ -12,16 +12,16 @@
     color: $color-main-50;
     cursor: pointer;
   }
-  &__input{
+  &__input {
     position: absolute;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    &:checked + .radio-button__box{
+    &:checked + .radio-button__box {
       border-color: $color-secondary;
     }
-    &:checked + .radio-button__box::before{
-      content: "";
+    &:checked + .radio-button__box::before {
+      content: '';
       position: absolute;
       top: 0.1875rem;
       left: 0.1875rem;
@@ -32,7 +32,7 @@
       box-sizing: border-box;
     }
   }
-  &__box{
+  &__box {
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
