--- a/src/components/rich-checkbox/rich-checkbox.scss
+++ b/src/components/rich-checkbox/rich-checkbox.scss
@@ -1,9 +1,9 @@
-.rich-checkbox{
+.rich-checkbox {
   margin-bottom: 10px;
-  &:last-child{
+  &:last-child {
     margin-bottom: 0;
   }
-  &__label{
+  &__label {
     display: inline-block;
     padding-left: 30px;
     font-weight: bold;
@@ -12,24 +12,24 @@
     color: $color-main-75;
     cursor: pointer;
   }
-  &__input{
+  &__input {
     position: absolute;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    &:checked + .rich-checkbox__box{
+    &:checked + .rich-checkbox__box {
       border-color: $color-secondary;
     }
-    &:checked + .rich-checkbox__box::before{
-      content: "";
+    &:checked + .rich-checkbox__box::before {
+      content: '';
       position: absolute;
       top: 0.25rem;
       left: 0.375rem;
       width: 0.375rem;
       height: 0.5rem;
       border-width: 0 2px 2px 0;
-      -moz-border-image:  $color-secondary-gradient;
-      -webkit-border-image:  $color-secondary-gradient;
+      -moz-border-image: $color-secondary-gradient;
+      -webkit-border-image: $color-secondary-gradient;
       border-image: $color-secondary-gradient;
       border-color: transparent;
       border-image-slice: 1;
@@ -39,7 +39,7 @@
       box-sizing: border-box;
     }
   }
-  &__box{
+  &__box {
     position: absolute;
     width: 1.25rem;
     height: 1.25rem;
@@ -49,7 +49,7 @@
     border-radius: 4px;
     background-color: white;
   }
-  &__description{
+  &__description {
     padding-left: 30px;
     margin-top: 4px;
     font-family: $font-main;
