--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -1,4 +1,6 @@
-.text-field, .subscription-text-field, .masked-text-field {
+.text-field,
+.subscription-text-field,
+.masked-text-field {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -9,11 +11,11 @@
     color: $color-main-100;
     margin-bottom: 5px;
   }
-  &__subtitle{
+  &__subtitle {
     text-transform: uppercase;
     color: $color-main-50;
   }
-  &__button{
+  &__button {
     position: absolute;
     top: 0;
     right: 0;
@@ -28,7 +30,8 @@
     color: $color-secondary;
     border: none;
     cursor: pointer;
-    &-background{    // белая подложка под стрелку
+    &-background {
+      // белая подложка под стрелку
       background-color: white;
       position: absolute;
       top: 1px;
@@ -41,19 +44,19 @@
       border-color: $color-main-50;
     }
   }
-  &__wrapper{
+  &__wrapper {
     width: 100%;
     position: relative;
   }
-  &__input{
+  &__input {
     width: 100%;
     padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
-    background: #FFFFFF;
+    background: #ffffff;
     border: 1px solid $color-main-25;
     box-sizing: border-box;
     border-radius: 4px;
     font-family: inherit;
-    font-size: .875rem;
+    font-size: 0.875rem;
     line-height: 1.125rem;
     color: $color-main-75;
     outline: none;
