--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,5 +1,5 @@
-.toggle{
-  &__label{
+.toggle {
+  &__label {
     display: inline-block;
     padding-left: 50px;
     font-size: 0.875rem;
@@ -7,16 +7,16 @@
     color: $color-main-50;
     cursor: pointer;
   }
-  &__input{
+  &__input {
     position: absolute;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    &:checked + .toggle__box{
+    &:checked + .toggle__box {
       border-color: $color-secondary;
     }
-    &:checked + .toggle__box::before{
-      content: "";
+    &:checked + .toggle__box::before {
+      content: '';
       position: absolute;
       top: 0.1875rem;
       left: 1.4375rem;
@@ -27,7 +27,7 @@
       box-sizing: border-box;
     }
   }
-  &__box{
+  &__box {
     position: absolute;
     width: 2.5rem;
     height: 1.25rem;
@@ -36,8 +36,8 @@
     border: 1px solid $color-main-25;
     border-radius: 10px;
     background-color: white;
-    &::before{
-      content: "";
+    &::before {
+      content: '';
       position: absolute;
       top: 0.1875rem;
       left: 0.1875rem;
