--- a/src/pages/websitePages/room-details/room-details.scss
+++ b/src/pages/websitePages/room-details/room-details.scss
@@ -1,11 +1,11 @@
-@import "../../../scss/fonts.scss";
-@import "../../../scss/colors.scss";
-@import "../../../components/header/header.scss";
-@import "../../../components/footer/footer.scss";
-@import "../../../components/abouts-room/abouts-room.scss";
-@import "../../../components/comment/comment.scss";
-@import "../../../components/bullet-list/bullet-list.scss";
-@import "../../../components/booking-room-card/booking-room-card.scss";
+@import '../../../scss/fonts.scss';
+@import '../../../scss/colors.scss';
+@import '../../../components/header/header.scss';
+@import '../../../components/footer/footer.scss';
+@import '../../../components/abouts-room/abouts-room.scss';
+@import '../../../components/comment/comment.scss';
+@import '../../../components/bullet-list/bullet-list.scss';
+@import '../../../components/booking-room-card/booking-room-card.scss';
 
 html {
   font-size: 16px;
@@ -61,7 +61,7 @@ body {
         margin-right: 0;
       }
     }
-    &_text{
+    &_text {
       justify-content: space-between;
     }
   }
@@ -103,7 +103,7 @@ body {
       margin-bottom: 0;
     }
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       width: 10px;
       height: 10px;
