--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,15 +1,14 @@
 $font-main: Montserrat, arial, sans-serif;
 $font-secondary: Quicksand, arial, sans-serif;
 $font-secondary-reserve: Opensans, arial, sans-serif;
-$material-icons: "Material Icons";
+$material-icons: 'Material Icons';
 
 @font-face {
   font-family: 'Montserrat';
   src: url('../../../fonts/montserrat/montserrat-regular.eot');
-  src: local('?'),
-      url("../../../fonts/montserrat/montserrat-regular.woff") format("woff"),
-      url("../../../fonts/montserrat/montserrat-regular.ttf") format("truetype"),
-      url("../../../fonts/montserrat/montserrat-regular.svg") format("svg");
+  src: local('?'), url('../../../fonts/montserrat/montserrat-regular.woff') format('woff'),
+    url('../../../fonts/montserrat/montserrat-regular.ttf') format('truetype'),
+    url('../../../fonts/montserrat/montserrat-regular.svg') format('svg');
 
   font-weight: normal;
   font-style: normal;
@@ -18,22 +17,9 @@ $material-icons: "Material Icons";
 @font-face {
   font-family: 'Montserrat';
   src: url('../../../fonts/montserrat/montserrat-bold.eot');
-  src: local('?'),
-      url("../../../fonts/montserrat/montserrat-bold.woff") format("woff"),
-      url("../../../fonts/montserrat/montserrat-bold.ttf") format("truetype"),
-      url("../../../fonts/montserrat/montserrat-bold.svg") format("svg");
-
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Quicksand';
-  src: url('../../../fonts/quicksand/quicksand-bold.eot');
-  src: local('?'),
-      url("../../../fonts/quicksand/quicksand-bold.woff") format("woff"),
-      url("../../../fonts/quicksand/quicksand-bold.ttf") format("truetype"),
-      url("../../../fonts/quicksand/quicksand-bold.svg") format("svg");
+  src: local('?'), url('../../../fonts/montserrat/montserrat-bold.woff') format('woff'),
+    url('../../../fonts/montserrat/montserrat-bold.ttf') format('truetype'),
+    url('../../../fonts/montserrat/montserrat-bold.svg') format('svg');
 
   font-weight: bold;
   font-style: normal;
@@ -42,22 +28,31 @@ $material-icons: "Material Icons";
 @font-face {
   font-family: 'Quicksand';
   src: url('../../../fonts/quicksand/quicksand-regular.eot');
-  src: local('?'),
-      url("../../../fonts/quicksand/quicksand-regular.woff") format("woff"),
-      url("../../../fonts/quicksand/quicksand-regular.ttf") format("truetype"),
-      url("../../../fonts/quicksand/quicksand-regular.svg") format("svg");
+  src: local('?'), url('../../../fonts/quicksand/quicksand-regular.woff') format('woff'),
+    url('../../../fonts/quicksand/quicksand-regular.ttf') format('truetype'),
+    url('../../../fonts/quicksand/quicksand-regular.svg') format('svg');
 
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
+  font-family: 'Quicksand';
+  src: url('../../../fonts/quicksand/quicksand-bold.eot');
+  src: local('?'), url('../../../fonts/quicksand/quicksand-bold.woff') format('woff'),
+    url('../../../fonts/quicksand/quicksand-bold.ttf') format('truetype'),
+    url('../../../fonts/quicksand/quicksand-bold.svg') format('svg');
+
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Opensans';
   src: url('../../../fonts/opensans/opensans-bold.eot');
-  src: local('?'),
-      url("../../../fonts/opensans/opensans-bold.woff") format("woff"),
-      url("../../../fonts/opensans/opensans-bold.ttf") format("truetype"),
-      url("../../../fonts/opensans/opensans-bold.svg") format("svg");
+  src: local('?'), url('../../../fonts/opensans/opensans-bold.woff') format('woff'),
+    url('../../../fonts/opensans/opensans-bold.ttf') format('truetype'),
+    url('../../../fonts/opensans/opensans-bold.svg') format('svg');
 
   font-weight: bold;
   font-style: normal;
@@ -66,10 +61,9 @@ $material-icons: "Material Icons";
 @font-face {
   font-family: 'Material Icons';
   src: url('../../../fonts/material-icons/materialicons-regular.eot');
-  src: local('?'),
-      url("../../../fonts/material-icons/materialicons-regular.woff") format("woff"),
-      url("../../../fonts/material-icons/materialicons-regular.ttf") format("truetype"),
-      url("../../../fonts/material-icons/materialicons-regular.svg") format("svg");
+  src: local('?'), url('../../../fonts/material-icons/materialicons-regular.woff') format('woff'),
+    url('../../../fonts/material-icons/materialicons-regular.ttf') format('truetype'),
+    url('../../../fonts/material-icons/materialicons-regular.svg') format('svg');
 
   font-weight: bold;
   font-style: normal;
