Updated to webpack

--- a/src/pug/variables.pug
+++ b/src/pug/variables.pug
@@ -77,3 +77,5 @@
                       {title: "служба поддержки", submenu:   [{url: "/mock-address", text: "Соглашения"},
                                                       {url: "/mock-address", text: "Сообщества"},
                                                       {url: "/mock-address", text: "Связь с нами"}]}]
+
+block empty
