--- a/src/pages/websitePages/index/index.pug
+++ b/src/pages/websitePages/index/index.pug
@@ -4,8 +4,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    link(rel="stylesheet", href="./index.scss")
-    // <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon/favicon-16x16.png">
 
     title Home page
   body
@@ -15,7 +14,7 @@ html(lang="ru")
         { link: "form-elements", text: "Form Elements"},
         { link: "cards", text: "Cards"},
         { link: "headers-footers", text: "Headers & Footers"},
-        { link: "landing-page", text: "Langing page"},
+        { link: "landing-page", text: "Landing page"},
         { link: "search-room", text: "Search Room"},
         { link: "room-details", text: "Room Details"},
         { link: "registration", text: "Registration"},
@@ -24,4 +23,5 @@ html(lang="ru")
     .home-page
       ul.home-page__list
         each page in pages
-          li.home-page__el(href=`${page.link}.html` target="_blank" rel="noopener noreferrer")= page.text
+          li.home-page__el
+            a.home-page__link(href=`${page.link}.html` target="_blank" rel="noopener noreferrer")= page.text
