Webpack in process. Try to build js and css for each page.

--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -36,12 +36,12 @@
     height: 1.5rem;
   }
   &__twitter {
-    background: url(../../../components/footer-creative/img/twitter.svg) no-repeat center;
+    background: url(./img/twitter.svg) no-repeat center;
   }
   &__facebook {
-    background: url(../../../components/footer-creative/img/facebook.svg) no-repeat center;
+    background: url(./img/facebook.svg) no-repeat center;
   }
   &__instagram {
-    background: url(../../../components/footer-creative/img/instagram.svg) no-repeat center;
+    background: url(./img/instagram.svg) no-repeat center;
   }
 }
