--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -25,7 +25,6 @@
   &__about-hotel {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     width: 260px;
     @media (max-width: 1000px) {
       display: none;
@@ -109,12 +108,12 @@
     @media (max-width: 444px) {
       margin-left: initial;
     }
-    background: url(../../../components/footer-creative/img/twitter.svg) no-repeat center;
+    background: url(./img/twitter.svg) no-repeat center;
   }
   &__facebook {
-    background: url(../../../components/footer-creative/img/facebook.svg) no-repeat center;
+    background: url(./img/facebook.svg) no-repeat center;
   }
   &__instagram {
-    background: url(../../../components/footer-creative/img/instagram.svg) no-repeat center;
+    background: url(./img/instagram.svg) no-repeat center;
   }
 }
