--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,5 @@
 .logotype {
-  background: url(../../../components/logo/img/logo.svg) no-repeat;
+  background: url(./img/logo.svg) no-repeat;
   background-size: cover;
   width: 3rem;
   height: 3rem;
