--- a/src/pages/UI-kit/headers-footers/headers-footers.scss
+++ b/src/pages/UI-kit/headers-footers/headers-footers.scss
@@ -1,5 +1,5 @@
 @import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
+@import '../../../scss/variables.scss';
 @import '../../../components/logo/logo.scss';
 @import '../../../components/header/header.scss';
 @import '../../../components/footer-creative/footer-creative.scss';
