--- a/src/components/filter-date/filter-date.pug
+++ b/src/components/filter-date/filter-date.pug
@@ -2,6 +2,6 @@ mixin filter-date({title})
 
   .filter-date.js-filter-date
     .filter-date__title= title
-    .filter-date__wrapper
+    .filter-date__wrapper.js-date-dropdown__wrapper
       .filter-date__arrow expand_more
       input.filter-date__input.js-filter-date__input(type= "text", placeholder= "19 авг - 23 авг", readonly)
