--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -3,11 +3,11 @@ mixin date-dropdown({title1, title2})
   .date-dropdown.js-date-dropdown
     .date-dropdown__date
       .date-dropdown__title= title1
-      .date-dropdown__wrapper
-        .date-dropdown__arrow expand_more
+      .date-dropdown__wrapper.js-date-dropdown__wrapper
+        .date-dropdown__arrow.js-dropdown__arrow expand_more
         input.date-dropdown__input.js-date-dropdown__input-1(type= "text", placeholder= "дд.мм.гггг", readonly)
     .date-dropdown__date
       .date-dropdown__title= title2
-      .date-dropdown__wrapper
-        .date-dropdown__arrow expand_more
+      .date-dropdown__wrapper.js-date-dropdown__wrapper
+        .date-dropdown__arrow.js-dropdown__arrow expand_more
         input.date-dropdown__input.js-date-dropdown__input-2(type= "text", placeholder= "дд.мм.гггг", readonly)
